resources/public/css/style.css
/* some style */

html, body{
  font-family: "Proxima nova";
}

a{
  cursor: pointer;
}

a:hover, a:hover *{
  text-decoration: none;
}

/*
 * Global add-ons
 */
 .sub-header {
    padding-bottom: 10px;
    border-bottom: 1px solid #eee;
}
/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
 .navbar-fixed-top {
    border: 0;
}

/* Hide for mobile, show later */
 .sidebar {
    display: none;
}
@media (min-width: 768px) {
    .sidebar {
        position: fixed;
        top: 51px;
        bottom: 0;
        left: 0;
        z-index: 1000;
        display: block;
        padding: 20px;
        overflow-x: hidden;
        overflow-y: auto;
        /* Scrollable contents if viewport is shorter than content. */
        background-color: #f5f5f5;
        border-right: 1px solid #eee;
    }
}
/* Sidebar navigation */
 .nav-sidebar {
    margin-right: -21px;
    /* 20px padding + 1px border */
    margin-bottom: 20px;
    margin-left: -20px;
}
.nav-sidebar > li > a {
    padding-right: 20px;
    padding-left: 20px;
}
.nav-sidebar > .active > a, .nav-sidebar > .active > a:hover, .nav-sidebar > .active > a:focus {
    color: #fff;
    background-color: #428bca;
}

/*
 * Main content
 */
 .main {
    padding: 20px;
}
@media (min-width: 768px) {
    .main {
        padding-right: 40px;
        padding-left: 40px;
    }
}
.main .page-header {
    margin-top: 0;
}
/*
 * Placeholder dashboard ideas
 */
 .placeholders {
    margin-bottom: 30px;
    text-align: center;
}
.placeholders h4 {
    margin-bottom: 0;
}
.placeholder {
    margin-bottom: 20px;
}
.placeholder img {
    display: inline-block;
    border-radius: 50%;
}
span.num.red {
    color: red;
}
.form-group {
    margin-bottom: 25px;
}

/* Reset bootstrap 3.3.5 help block overflow */
.input-group[class*=col-]{
  float: left;
  padding-left: 15px;
  padding-right: 15px;
}

.hidden {
  display: none;
}

div#app{
  margin-top: 50px;
}

nav.navbar{
  background-color: white;
  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
}

nav.tab-navigation{
  margin-top: 10px;
}

div.report-list {
  margin: 0;
  margin-top: 10px;
  background-color: white;
}

div.report-list div.report-list-left{
  width: 330px;
  float: left;
  display: block;
}

div.chart-container{
  width: 600px;
}

div.report-list div.chart-container{
  margin-left: 300px;
  width: 600px;
  margin-top: 30px;
}

div.report-panel div.chart-container{
  margin-left: -71px;
  margin-top: 0px;
}

div.report-list span.num{
  color: black;
  font-weight: bold;
}

span.num.red{
  color: red;
}

span.num.green{
  color: green;
}

div.report-list span.label, div.report-list label.label{
  color: black;
}

div.report-list label.comments-label{
  margin: 10px 0px 0px;
  padding: 0px;
  color: black;
}

label.switch-vis{
  margin: 0px 5px;
}

div.report-list input.editable-data, div.report-list input.editable-data:focus{
  outline: 0;
  border: 0px solid black;
  border-bottom: 1px solid blue;
  color: blue;
  text-align: center;
  width: 80px;
  height: 23px;
  margin: 0px 0px 5px 0px;
  padding: 0px;
}

div.report-list label.editable-label{
  width: 80px;
  color: black;
  border-bottom: 1px solid black;
  text-align: center;
  font-weight: normal;
  height: 23px;
  padding: 0px;
  margin: 0px 0px 5px 0px;
}

div.report-list textarea.comment{
  width: 200px;
  border: 1px solid black;
  padding: 5px;
  margin-top: 10px;
}

span.label{
  padding: 0;
  margin: 0;
}

span img.user-icon{
  height: 24px;
  width: 24px;
  margin-right: 5px;
}

.select2-selection span img.user-icon{
  height: 20px;
  width: 20px;
  margin-right: 5px;
}

div.finances h2{
  text-align: center;
}

div.finances div.link-bar{
  text-align: center;
  z-index: 1;
}

div.finances div.link-bar a.finances-link{
  text-decoration: underline;
  margin: 10px;
}

div.finances div.link-bar a.finances-link.active{
  text-decoration: none;
}

div.finances div.finances-body{
  width: 600px;
  left: 50%;
  margin-left: -300px;
  position: relative;
}

div.finances div.finances-body div.section{
  text-align: center;
}

div.finances div.finances-body div.section h3{
  margin-bottom: 0px;
}

div.finances div.finances-body div.section h3 span{
  margin-left: 24px;
}

div.finances div.finances-body div.section div.chart-container{
  position: relative;
  left: 50%;
  margin-left: -300px;
}

div.update-footer{
  position: relative;
  left: 50%;
  margin-left: -300px;
  margin-top: 30px;
  width: 600px;
  height: 40px;
  vertical-align: middle;
}

div.update-footer div{
  margin: 0px 0px 0px 35px;
  color: rgba(0, 0, 0, 0.4);
  text-decoration: none;
}

div.update-footer div.author{
  color: rgba(0, 0, 0, 0.8);
}

div.update-footer div.timeago{
  color: rgba(0, 0, 0, 0.4);
}

div.update-footer img.author-image{
  height: 30px;
  width: 30px;
  float: left;
  border-radius: 3px;
  margin-top: 5px;
}

div.rich-editor-container {
  position: relative;
  left: 50%;
  margin-left: -300px;
  width: 600px;
  margin-top: 30px;
  min-height: 90px;
}

div.rich-editor-container div.rich-editor.no-data{
  color: rgba(0, 0, 0, 0.4);
}

div.rich-editor-container div.rich-editor,
div.rich-editor-container div.fake-rich-editor{
  width: 100%;
}

div.rich-editor-container div.rich-editor-save{
  height: 40px;
}

div.rich-editor-container div.rich-editor-save button.cancel-button{
  margin-left: 10px;
}

div.rich-editor-container div.rich-editor *::selection{
  background: #C1E7F4;
}

div.rich-editor-container div.rich-editor *::-moz-selection{
  background: #C1E7F4;
}

div.rich-editor-container div.rich-editor a{
  font-weight: bold;
  text-decoration: underline;
  color: black;
}

div.rich-editor-container div.rich-editor.collapsed{
  overflow: hidden;
  max-height: 300px;
  position: relative;
}

div.rich-editor-container div.rich-editor.collapsed:after{
  bottom: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  content: "";
  background: linear-gradient(
    to top,
    rgba(255,255,255, 1) -20%,
    rgba(255,255,255, 0) 100%
  );
}
/* ... */

